feat(i18n): first implementation of language support

--- a/public/assets/langs/en.json
+++ b/public/assets/langs/en.json
@@ -22,5 +22,44 @@
 	"Refresh": "Refresh",
 	"Updating": "Updating...",
 	"ViewFullList": "View full list",
-	"FilterList": "Filter list"
+	"FilterList": "Filter list",
+	"less": "less",
+	"more": "more",
+	"show": "Show",
+	"PullRequestsError": "Unable to retrieve your pull requests.",
+	"PullRequestsEmpty": "There are no pull requests in your projects at the moment.",
+	"ProfileNotFound": "Unable to load your profile.",
+	"Menu": "Menu",
+	"Projects": "Projects",
+	"Settings": "Settings",
+	"NoProject": "No project",
+	"OneProject": "1 Project",
+	"Search": "Search",
+	"NoProjectOnOrganization": "The currently selected organizations do not contain any projects.",
+	"Today": "Today",
+	"Yesterday": "Yesterday",
+	"Time": "$0 days ago",
+	"AutoComplete": "Auto complete",
+	"Draft": "Draft",
+	"Conflicts": "Conflicts",
+	"NoRepository": "No repository for this project.",
+	"Back": "Back",
+	"ProjectsOrganizations": "Select the organizations for which you want to see projects.",
+	"OrganizationsEmpty": "There is no valid organization on your account.",
+	"Manually": "Manually",
+	"EveryMinutes": "Every $0 minutes",
+	"LaunchStartup": "Launch the application on startup",
+	"ConfigTheme": "Pick your theme.",
+	"Version": "Version",
+	"SignOut": "Sign out",
+	"Theme": "Theme",
+	"Organizations": "Organizations",
+	"StartUp": "Start-up",
+	"Refreshment": "Refreshment",
+	"HideMenu": "Hide menu",
+	"Login": "Skizzle allows you to group the pull requests of your teams. <br/>To get started <b>log in</b> with your account.",
+	"Globals": "General",
+	"ChooseLanguage": "Choose your language:",
+	"DefaultValue": "Choose a value",
+	"Loading": "Loading..."
 }
