--- a/public/assets/langs/fr.json
+++ b/public/assets/langs/fr.json
@@ -22,5 +22,44 @@
 	"Refresh": "Rafraîchir",
 	"Updating": "Mise à jour...",
 	"ViewFullList": "Afficher la liste complète",
-	"FilterList": "Filtrer la liste"
+	"FilterList": "Filtrer la liste",
+	"less": "moins",
+	"more": "plus",
+	"show": "Voir",
+	"PullRequestsError": "Impossible de récupérer vos pull requests.",
+	"PullRequestsEmpty": "Il n'y a aucune pull request dans vos projets pour le moment.",
+	"ProfileNotFound": "Impossible de charger votre profil.",
+	"Menu": "Menu",
+	"Projects": "Projets",
+	"Settings": "Réglagles",
+	"NoProject": "Aucun projet",
+	"OneProject": "1 Projet",
+	"Search": "Chercher",
+	"NoProjectOnOrganization": "Les organisations actuellement selectionnées ne contiennent aucun projet.",
+	"Today": "Aujourd'hui",
+	"Yesterday": "Hier",
+	"Time": "il y a $0 jours",
+	"AutoComplete": "Saisie automatique",
+	"Draft": "Brouillon",
+	"Conflicts": "Conflits",
+	"NoRepository": "Aucun repository pour ce projet.",
+	"Back": "Retour",
+	"ProjectsOrganizations": "Sélectionnez les organisations pour lesquelles vous voulez voir les projets.",
+	"OrganizationsEmpty": "Il n'y a aucune organisation valide sur votre compte.",
+	"Manually": "Manuellement",
+	"EveryMinutes": "Toutes les $0 minutes",
+	"LaunchStartup": "Lancer l'application au démarrage",
+	"ConfigTheme": "Choisissez votre thème.",
+	"Version": "Version",
+	"SignOut": "Se déconnecter",
+	"Theme": "Theme",
+	"Organizations": "Organisations",
+	"StartUp": "Démarrage",
+	"Refreshment": "Rafraîchissement",
+	"HideMenu": "Masquer le menu",
+	"Login": "Skizzle vous permet de regrouper les pull requests de vos équipes. <br/>Pour commencer <b>connectez vous</b> avec votre compte.",
+	"Globals": "Général",
+	"ChooseLanguage": "Choisissez votre langage :",
+	"DefaultValue": "Choisissez une valeur",
+	"Loading": "Chargement..."
 }
