fix(i18n): change the method of translate

--- a/public/assets/langs/en.json
+++ b/public/assets/langs/en.json
@@ -2,6 +2,7 @@
 	"About Application": "About Application",
 	"Quit": "Quit",
 	"Edit": "Edit",
+	"Undo": "Undo",
 	"Redo": "Redo",
 	"Cut": "Cut",
 	"Copy": "Copy",
