--- a/public/assets/langs/fr.json
+++ b/public/assets/langs/fr.json
@@ -1,11 +1,12 @@
 {
 	"About Application": "A propos de l'application",
 	"Quit": "Quitter",
-	"Edit": "Edit",
-	"Redo": "Redo",
-	"Cut": "Cut",
-	"Copy": "Copy",
-	"Paste": "Paste",
+	"Edit": "Editer",
+	"Undo": "Annuler",
+	"Redo": "Refaire",
+	"Cut": "Couper",
+	"Copy": "Copier",
+	"Paste": "Coller",
 	"Select All": "Tout selectionnée",
 	"Open devtool": "Ouvrir la console de developpement",
 	"Reload application": "Recharger l'application",
