fix(lang): change many english expression, and fix label on filter list

--- a/public/assets/langs/en.json
+++ b/public/assets/langs/en.json
@@ -22,7 +22,7 @@
 	"Retry": "Retry",
 	"Refresh": "Refresh",
 	"Updating": "Updating...",
-	"ViewFullList": "View full list",
+	"ViewFullList": "Show full list",
 	"FilterList": "Filter list",
 	"less": "less",
 	"more": "more",
@@ -45,18 +45,18 @@
 	"Conflicts": "Conflicts",
 	"NoRepository": "No repository for this project.",
 	"Back": "Back",
-	"ProjectsOrganizations": "Select the organizations for which you want to see projects.",
-	"OrganizationsEmpty": "There is no valid organization on your account.",
+	"ProjectsOrganizations": "Select the organizations to see their projects",
+	"OrganizationsEmpty": "There is no valid organization on your account",
 	"Manually": "Manually",
 	"EveryMinutes": "Every $0 minutes",
-	"LaunchStartup": "Launch the application on startup",
-	"ConfigTheme": "Pick your theme.",
+	"LaunchStartup": "Launch on startup",
+	"ConfigTheme": "Pick your theme",
 	"Version": "Version",
 	"SignOut": "Sign out",
-	"Theme": "Theme",
+	"Theme": "Themes",
 	"Organizations": "Organizations",
-	"StartUp": "Start-up",
-	"Refreshment": "Refreshment",
+	"StartUp": "Auto launch",
+	"Refreshment": "Refresh",
 	"HideMenu": "Hide menu",
 	"Login": "Skizzle allows you to group the pull requests of your teams. <br/>To get started <b>log in</b> with your account.",
 	"Globals": "General",
