--- a/public/assets/langs/fr.json
+++ b/public/assets/langs/fr.json
@@ -20,7 +20,7 @@
 	"UpdateNotified": "Redémarrage dans $0 seconde$1",
 	"Offline": "Vous n'êtes pas connecté à Internet. Il est impossible de rafraîchir la liste et certaines fonctionnalités sont désactivées.",
 	"Retry": "Réessayer",
-	"Refresh": "Rafraîchir",
+	"Refresh": "Actualiser",
 	"Updating": "Mise à jour...",
 	"ViewFullList": "Afficher la liste complète",
 	"FilterList": "Filtrer la liste",
@@ -49,14 +49,14 @@
 	"OrganizationsEmpty": "Il n'y a aucune organisation valide sur votre compte.",
 	"Manually": "Manuellement",
 	"EveryMinutes": "Toutes les $0 minutes",
-	"LaunchStartup": "Lancer l'application au démarrage",
+	"LaunchStartup": "Lancer au démarrage",
 	"ConfigTheme": "Choisissez votre thème.",
 	"Version": "Version",
 	"SignOut": "Se déconnecter",
-	"Theme": "Theme",
+	"Theme": "Thêmes",
 	"Organizations": "Organisations",
 	"StartUp": "Démarrage",
-	"Refreshment": "Rafraîchissement",
+	"Refreshment": "Actualisation",
 	"HideMenu": "Masquer le menu",
 	"Login": "Skizzle vous permet de regrouper les pull requests de vos équipes. <br/>Pour commencer <b>connectez vous</b> avec votre compte.",
 	"Globals": "Général",
