fix(lang): change english expression

--- a/public/assets/langs/en.json
+++ b/public/assets/langs/en.json
@@ -45,7 +45,7 @@
 	"Conflicts": "Conflicts",
 	"NoRepository": "No repository for this project.",
 	"Back": "Back",
-	"ProjectsOrganizations": "Select the organizations to see their projects",
+	"ProjectsOrganizations": "Select organization(s) to see projects",
 	"OrganizationsEmpty": "There is no valid organization on your account",
 	"Manually": "Manually",
 	"EveryMinutes": "Every $0 minutes",
@@ -55,7 +55,7 @@
 	"SignOut": "Sign out",
 	"Theme": "Themes",
 	"Organizations": "Organizations",
-	"StartUp": "Auto launch",
+	"StartUp": "Auto-launch",
 	"Refreshment": "Refresh",
 	"HideMenu": "Hide menu",
 	"Login": "Skizzle allows you to group the pull requests of your teams. <br/>To get started <b>log in</b> with your account.",
